<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/item_tramite_container_online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_margin="8dp">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="fitCenter"
            android:layout_marginBottom="12dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_mouse"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/fr_main_txt_online"
            android:gravity="center"
            android:fontFamily="@string/font_general_thin"
            android:textSize="12sp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/item_tramite_txt_tramite"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/item_tramite_container_online"
        android:layout_marginTop="12dp"
        android:textSize="16sp"
        android:fontFamily="@string/font_general_light"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"/>
    <TextView
        android:id="@+id/item_tramite_txt_dependencia"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/item_tramite_txt_tramite"
        android:layout_toRightOf="@id/item_tramite_container_online"
        android:textSize="14sp"
        android:fontFamily="@string/general_font_thin"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:paddingBottom="12dp"/>
</RelativeLayout>