<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/pager_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:singleLine="true"
        android:lines="1"
        android:gravity="left"
        android:textSize="22sp"
        android:fontFamily="@string/font_general_light"
        />
    <TextView
        android:id="@+id/pager_item_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:singleLine="true"
        android:lines="1"
        android:gravity="left"
        android:textSize="14sp"
        android:textColor="@color/general_color_dark_gray"
        android:layout_below="@id/pager_item_title"
        android:fontFamily="@string/font_general_bold"
        />
    <View
        android:layout_below="@id/pager_item_date"
        android:id="@+id/pager_item_separator_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/general_color_light_gray"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"></View>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pager_item_btn_more"
        android:paddingTop="8dp"
        android:textColor="@color/general_red"
        android:layout_alignParentBottom="true"
        android:id="@+id/pager_item_btn_more"
        android:background="@android:color/transparent"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/pager_item_separator_2"
        android:background="@color/general_color_light_gray"
        android:layout_above="@id/pager_item_btn_more"></View>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:fontFamily="@string/font_general_light"
        android:textSize="16sp"
        android:id="@+id/pager_item_description"
        android:layout_above="@id/pager_item_separator_2"
        android:layout_marginBottom="4dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/pager_item_separator_1"
        android:layout_margin="8dp"
        android:scaleType="centerCrop"
        android:layout_above="@id/pager_item_description"
        android:id="@+id/pager_item_image"/>
</RelativeLayout>