<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    sothree:overlay="true"
    android:gravity="bottom"
    sothree:fadeColor="#a0a0fa"
    sothree:panelHeight="50dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <dragonflylabs.ui.BlurredImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/act_noticia_detail_image"
            android:scaleType="centerCrop"
            app:blurLevel="30"
            android:background="#ffff6870"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="86dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:fontFamily="@string/font_general_bold"
                    android:textSize="18sp"
                    android:id="@+id/act_noticia_detail_txt_title"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:fontFamily="@string/font_general_light"
                    android:textSize="14sp"
                    android:id="@+id/act_noticia_detail_txt_description"
                    />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#88ffffff"
            android:paddingTop="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_noticias_detail_dummy"
                android:fontFamily="@string/font_general_bold"
                android:textColor="@color/general_red"
                android:layout_marginLeft="20dp"
                android:textSize="18sp"
                android:layout_marginRight="4dp"
                android:id="@+id/act_noticia_detail_txt_no_views"
                android:layout_marginTop="4dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_noticias_detail_views"
                android:fontFamily="@string/font_general_bold"
                android:textColor="@color/general_red"
                android:textSize="18sp"
                android:layout_marginRight="12dp"
                android:layout_toRightOf="@id/act_noticia_detail_txt_no_views"
                android:id="@+id/act_noticia_detail_txt_views"
                android:layout_marginTop="4dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_noticias_detail_dummy"
                android:fontFamily="@string/font_general_bold"
                android:textColor="@color/general_red"
                android:textSize="18sp"
                android:layout_marginRight="4dp"
                android:id="@+id/act_noticia_detail_txt_no_comments"
                android:layout_toRightOf="@id/act_noticia_detail_txt_views"
                android:layout_marginTop="4dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_noticias_detail_comments"
                android:fontFamily="@string/font_general_bold"
                android:textColor="@color/general_red"
                android:textSize="18sp"
                android:layout_marginRight="4dp"
                android:id="@+id/act_noticia_detail_txt_comments"
                android:layout_toRightOf="@id/act_noticia_detail_txt_no_comments"
                android:layout_marginTop="4dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/white"
                android:id="@+id/act_noticia_detail_separator"
                android:layout_below="@id/act_noticia_detail_txt_no_views"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="#99ffffff"></LinearLayout>
    </LinearLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>
