<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dragonflylabs.fragments.DependenciesFrament">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fr_dependencias_map_container"></FrameLayout>

    <RelativeLayout
        android:layout_width="180dp"
        android:layout_height="160dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:padding="12dp"
        android:background="@drawable/card"
        android:layout_margin="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:fontFamily="@string/font_general_light"
            android:textSize="18sp"
            android:id="@+id/fr_dependencias_txt_name"/>
        <LinearLayout
            android:id="@+id/fr_dependencias_btn_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_alignParentRight="true">
            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_web"
                android:layout_marginLeft="12dp"
                android:id="@+id/fr_dependencias_btn_web"
                android:scaleType="fitCenter"/>
            <ImageButton
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/fr_dependencias_btn_calendar"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_calendar"
                android:layout_marginLeft="12dp"
                android:scaleType="fitCenter"/>
            <ImageButton
                android:id="@+id/fr_dependencias_btn_phone"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="12dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_phone"
                android:scaleType="fitCenter"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/fr_dependencias_txt_name"
            android:layout_above="@id/fr_dependencias_btn_container"
            android:fontFamily="@string/font_general_thin"
            android:textSize="14sp"
            android:id="@+id/fr_dependencias_txt_address"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@android:color/white"
            android:textSize="18sp"
            android:id="@+id/fr_dependencias_txt_select"
            android:fontFamily="@string/font_general_light"
            android:text="@string/fr_dependencias_dummy_select"/>
    </RelativeLayout>
</RelativeLayout>
